<resources>
    <string name="app_name">RestaurApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">IconoBuscar</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_contactos">Contactos</string>
    <string name="action_recomendaciones">Mis Recomendaciones</string>
    <string name="action_about">Acerca de</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="title_activity_splash_screen">RestaurApp</string>
    
    <string name="facebook_app_id">1634470476770752</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_iniciar_sesion">IniciarSesionActivity</string>
    <string name="title_activity_amigosgrupos">AmigosGruposActivity</string>

    <string name="main_button_footer_buscar">Buscar</string>
    <string name="main_button_footer_cerca">Cerca</string>
    <string name="main_button_footer_favoritos">Favs</string>
    <string name="main_button_footer_recomendaciones">+ Rec</string>
    <string name="footer_Usuario_boton_Perfil">Perfil</string>
    <string name="footer_Usuario_boton_Preferencia">Preferencia</string>

    <string name="footer_Contacto_boton_Amigos">Amigos</string>
    <string name="footer_Contacto_boton_Grupos">Grupos</string>

    <string name="masRec_btn_MayorPuntaje">Mejor Puntuados</string>
    <string name="masRec_btn_MasRecomendaciones">Más Populares</string>


    <!--Listas default cuando no hay data-->
    <string-array name="listaComentariosVacia">
        <item>Aún no existen comentarios</item>
    </string-array>
    <string-array name="listaDistritosVacia">
        <item>No existen distritos</item>
    </string-array>
    <string-array name="listaTiposComidaVacia">
        <item>No existen tipos de comida</item>
    </string-array>
    <string-array name="listaCercaVacia">
        <item>No existen restaurantes cercanos</item>
    </string-array>
    <string-array name="listaFavoritosVacia">
        <item>No existen restaurantes favoritos</item>
    </string-array>
    <string-array name="listaRestaurantesVacia">
        <item>No existen restaurantes</item>
    </string-array>
    <string-array name="listaPuntajeVacia">
        <item>No existen restaurantes</item>
    </string-array>
    <string-array name="listaPopularesVacia">
        <item>No existen restaurantes</item>
    </string-array>









    <string-array name="listaDemo">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>


    <string-array name="listaDemo2">
        <item>Jugos</item>
        <item>Fresas</item>
        <item>Latas</item>
        <item>Vasos</item>
        <item>Tasas</item>
        <item>Cubiertos</item>
        <item>Servilletas</item>
        <item>Fresas</item>
        <item>Latas</item>
        <item>Vasos</item>
        <item>Tasas</item>
        <item>Cubiertos</item>
        <item>Servilletas</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_restaurante">Restaurante</string>
    <string name="title_activity_login_main">LoginMainActivity</string>
    <string name="title_activity_contactos">ContactosActivity</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_lista_restaurantes">ListaRestaurantesActivity</string>
    <string name="title_activity_recomendaciones_para_mi">RecomendacionesParaMiActivity</string>
    <string name="title_activity_recomendacion_ver">RecomendacionVerActivity</string>
    <string name="title_activity_image_foto">RecomendacionVerImageFotoActivity</string>

</resources>
