<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="upc.edu.pe.restaurapp.RestauranteActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="70"
        app:showAsAction="never" />
    <item android:id="@+id/action_perfil"
        android:title="@string/action_perfil"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item android:id="@+id/action_contactos"
        android:title="@string/action_contactos"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="80"
        app:showAsAction="never" />
</menu>
